# report_builder

./: .gitignore  CMakeLists.txt  README.md  data_processors.h  data_providers.h  data_types.h  export_strategies.h  final_test.cpp  formatters.h  interfaces.h  main.cpp  report_builder.h  report_factories.h  test_simple.cpp
include/report_builde/: data_types.h
include/report_builder/: data_processors.h  data_providers.h  export_strategies.h  formatters.h  interfaces.h  report_builder.h  report_factories.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  integration_tests.cpp  unit_tests.cpp
